--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <source src="penta.mp4" type="video/mp4">
     </video>
     <audio id="son" src="son.mp3" autoplay></audio>
-    <button onclick="toggleSon()" class="pause"><img id="img" src="pause.png" alt=""></button>
+    <button onclick="toggleSon()" class="play"><img id="img" src="pause.png" alt=""></button>
     <div class="card">
     <div class="banner">
             <img src="https://i.pinimg.com/originals/c4/db/a5/c4dba58695a5f02516498036e79fd1a3.gif" id="banner">
